lab1/Test/L1-A-10-69.output
Error Type A at Line 11
Error Type B at Line 17
Error Type B at Line 25
Error Type B at Line 39
Error Type B at Line 44
Error Type B at Line 45
Error Type A at Line 45
