lab1/Test/L1-A-10-69.cmm
float ;
int qxjrdL [ 712724372 ] , ndqcttnic4C 

;
int ;
int OrzyjGCITN ( int GQhGzL89VaRuAkVuJhCz , int wkX01VnTwv0LRZG1 
  ) {
}
int CKZP_FOzPly3_AsG2Js9 ( int h0lWof22Ia0mIZfqV ) 
  {
  while ( e83V8ii0P2FM ) &  if ( BO2nPRUnbCCgO54TxP 
    ) {
    zs9_ ;
    if ( ljihiaggddLPr )     pCQYZH ;
else     if ( K4 )     if ( fPahj5n6lLiJ1zqPQS )     DvjnZt 
      ;
else     while ( Kn9butFXG80lKTLmta )     if ( + H8HIOuriCsLXzaq7j2y 
      )     Q4iq1Pmo2dnLsYczPtm ;
else {
      int mX0r ;
      int tY0Ewn4L ;
      int WR ;
      struct {
      }HZd220k_ ;
     }




  }else {
    struct QeGdNSqfGrFo {
    }__7t9fTEzucMnt6scz ;
    int rZE , akL6 ;
    while ( ZeAilW ) {
      int KGnfYVgnEOkvz0M = j ;
    }
    KS8uQBrHJqggFFzts ;
    MqzqTqWC8zizxClbrj00 ;
;    xc3V19I_8Se0rsFU44 ;
  }

  return V0Fj6TpSSoIEY_vg ;
}
struct rF5AUQToGWr13t G == ( ) {
  if ( < acwke0tzZvPUWE )   a07Ry = ^qCdQREATKBOfa7 
    && Cl != r8 / ! - ! ziEH7eVHgGXRRE [ fhcKmW3IT || 
    PgFveUrA > Y2227e8XoBuyNyN + puUzNHYi_ ( HzV2hgRVJGFoyAS 
    = eUV <= gZdofEXvQjx * ( bwJs42mB1y = lJGf && v0CoQknf508tPO4 
    [ pZ7jv == J6WblqaBfNS1FXyxTA - bJTChs / tx4Ki ( C1_Y0xTeAC5oFM4HH 
    , P8ow39 ) < - JHfqdzvBUHYo5KBzmu ] >= ! kdsJ7kRtF9hHAIS 
    * ZEffTjYZFxN ) - 1079946048.593796261 + D2XbnUFrsGI 
    ) * 1691048363 ] . jt4ozYo - I9Qv1 ( ) ;

}
